--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <postgresql.version>42.5.1</postgresql.version>
         <org.dbunit.version>2.7.3</org.dbunit.version>
         <com.h2database.version>2.1.214</com.h2database.version>
+        <org.slf4j.version>1.5.6</org.slf4j.version>
     </properties>
     <dependencies>
         <dependency>
@@ -20,13 +21,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.5.6</version>
+            <version>${org.slf4j.version}</version>
             <type>jar</type>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.5.6</version>
+            <version>${org.slf4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.dbunit</groupId>
